# auto.fun

./: .dockerignore  .env  .env.defaults  .env.example  .env.template  .env.vite.example  .eslintrc.json  .gitignore  .railwayignore  AUTH.MD  Anchor.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  LOCAL_DEPLOYMENT.md  LOCAL_DOCKER_DEPLOYMENT.md  README.md  auth.diff  auth.ts  bun.lockb  cache.ts  characterCreation.ts  diff.diff  docker-compose.services.yml  docker-compose.yml  eslint.config.js  generate-noeyes-hues.js  global.d.ts  index.html  keypairgen.ts  keypairworker.ts  knip.json  lock.ts  logger.ts  mcap.ts  mediaGeneration.ts  migrate.ts  missedEvents.ts  next.config.ts  nixpacks.toml  (+23 more)
.husky/: pre-commit
bots/: bot.ts  swapbot.ts
cli/: command.ts  scripts.ts
core/: textrenderer.js
docs/: docusaurus.config.ts  launch_and_swap.md
drizzle/: migrations.sql
lib/: aws.ts  constant.ts  create-market.ts  eventProcessor.ts  fetch.ts  migration.ts  raydium-config.ts  scripts.ts  solana.ts  statsManager.ts  tokenUtils.ts  util.ts
migration_be/: .env.example  dev.sqlite  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
program/: Anchor.toml  README.md  aUTogXR9ve3MgSsykCAdcEwXPgfHiq6PLovBkwJFbTo.json  (+4 more)
program/raydium_vault/programs/: Cargo.toml
program/raydium_vault/programs/raydium_vault/src/: constants.rs  lib.rs
program/raydium_vault/programs/raydium_vault/src/instructions/: change_claimer.rs
program/raydium_vault/programs/src/: constants.rs  lib.rs
program/raydium_vault/programs/src/instructions/: vault_initialize.rs
vanity/: Cargo.toml  package.json  test.js  wrangler.toml
vanity/src/: lib.rs  vanity.rs
(+639 files in other folders)
