[package]
name = "vanity"
version = "0.1.0"
edition = "2021"
authors = [ "Shaw <shawmakesmagic@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
worker = { version="0.5.0", features=["http"] }
worker-macros = { version="0.5.0", features=["http"] }
console_error_panic_hook = { version = "0.1.1" }
sha2 = "0.10.8"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.67"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5.0"